Fix bug where you can't grab horizontal scrollbar

--- a/stylesheets/ember-table.less
+++ b/stylesheets/ember-table.less
@@ -309,7 +309,7 @@
   position: absolute;
   border-top: 1px solid @table-footer-border-top;
   overflow: hidden;
-  z-index: 3;
+  z-index: 1;
 
   .ember-table-table-cell .ember-table-toggle {
     display: none;
